--- a/Proj_284260_342454_342763/Miniproject_1/Colab_Notebook.ipynb
+++ b/Proj_284260_342454_342763/Miniproject_1/Colab_Notebook.ipynb
@@ -15,7 +15,7 @@
         "id": "E2-0sGH4Ti3D",
         "outputId": "457511d3-01ea-403d-de80-3595225ff5dd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -34,12 +34,12 @@
       "metadata": {
         "id": "9A2Vit1lTvNe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "no978ZHTSaNa"
       },
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "skiuQ9RGT7sf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,33 +73,57 @@
         "        ## instantiate model + optimizer + loss function + any other stuff you need\n",
         "        super().__init__()\n",
         "\n",
+        "        \"\"\" 22.82 with 25, 50k\n",
+        "\n",
         "        self.encoder = nn.Sequential( # initial: N, 3, 32, 32\n",
-        "            nn.AvgPool2d(kernel_size = 2, stride = 2, padding = 0), # N, 3, 16, 16\n",
-        "            nn.Conv2d(3, 64, kernel_size = 5, stride = 1),  # N , 32, 12 , 12\n",
+        "            nn.Conv2d(3, 32, kernel_size = 3, padding = 1), # N, 32, 32, 32\n",
         "            nn.ReLU(),\n",
-        "            nn.Conv2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 8, 8\n",
+        "            nn.MaxPool2d(kernel_size = 2, stride = 2, padding = 0), # N, 32, 16, 16\n",
+        "            nn.Conv2d(32, 64, kernel_size = 3), # N, 64, 14, 14\n",
         "            nn.ReLU(),\n",
-        "            nn.Conv2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 4, 4\n",
+        "            nn.Conv2d(64, 64, kernel_size = 3, padding = 0), # N, 64, 12, 12\n",
         "            nn.ReLU(),\n",
-        "            nn.Conv2d(64, 128, kernel_size = 4, stride = 1, padding = 0), # N, 128, 1, 1\n",
+        "            nn.Conv2d(64, 128, kernel_size = 5, padding = 1), # N, 128, 10, 10\n",
+        "            nn.ReLU(),\n",
         "        )\n",
         "\n",
         "        self.decoder = nn.Sequential(\n",
-        "            nn.ConvTranspose2d(128, 64, kernel_size = 4, stride = 1, padding = 0), # N, 64, 4, 4\n",
+        "            nn.ConvTranspose2d(128, 64, kernel_size = 5, padding = 2), # N, 64, 10, 10\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 8, 8\n",
+        "            nn.ConvTranspose2d(64, 32, kernel_size = 4), # N, 32, 13, 13\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 12, 12\n",
+        "            nn.ConvTranspose2d(32, 32, kernel_size = 3), # N, 3, 15, 15\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 16, 16\n",
+        "            nn.Upsample(scale_factor=2, mode = 'bilinear', align_corners=True), # N, 32, 30, 30\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 20, 20\n",
+        "            nn.ConvTranspose2d(32, 3, kernel_size = 3), # N, 3, 32, 32\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 24, 24\n",
+        "        )\n",
+        "        \"\"\"\n",
+        "\n",
+        "        self.encoder = nn.Sequential( # initial: N, 3, 32, 32\n",
+        "            nn.Conv2d(3, 32, kernel_size = 3, padding = 1), # N, 32, 32, 32\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 64, kernel_size = 5, stride = 1, padding = 0), # N, 64, 28, 28\n",
+        "            nn.MaxPool2d(kernel_size = 2, stride = 2, padding = 0), # N, 32, 16, 16\n",
+        "            nn.Conv2d(32, 64, kernel_size = 3), # N, 64, 14, 14\n",
         "            nn.ReLU(),\n",
-        "            nn.ConvTranspose2d(64, 3, kernel_size = 5, stride = 1, padding = 0) # N, 3, 32, 32\n",
+        "            nn.Conv2d(64, 64, kernel_size = 3, padding = 0), # N, 64, 12, 12\n",
+        "            nn.ReLU(),\n",
+        "            nn.Conv2d(64, 256, kernel_size = 5, padding = 1), # N, 128, 10, 10\n",
+        "            nn.ReLU(),\n",
+        "        )\n",
+        "\n",
+        "        self.decoder = nn.Sequential(\n",
+        "            nn.ConvTranspose2d(256, 64, kernel_size = 5, padding = 2), # N, 64, 10, 10\n",
+        "            nn.ReLU(),\n",
+        "            nn.ConvTranspose2d(64, 32, kernel_size = 4), # N, 32, 13, 13\n",
+        "            nn.ReLU(),\n",
+        "            nn.ConvTranspose2d(32, 32, kernel_size = 3), # N, 3, 15, 15\n",
+        "            nn.ReLU(),\n",
+        "            nn.Upsample(scale_factor=2, mode = 'bilinear', align_corners=True), # N, 32, 30, 30\n",
+        "            nn.ReLU(),\n",
+        "            nn.ConvTranspose2d(32, 3, kernel_size = 3), # N, 3, 32, 32\n",
+        "            nn.ReLU(),\n",
         "        )\n",
         "\n",
         "        self.criterion = nn.MSELoss()\n",
@@ -110,14 +134,13 @@
         "        ## This loads the parameters saved in bestmodel . pth into the model\n",
         "        pass\n",
         "\n",
-        "    def train(self, train_input, train_target) -> None:\n",
+        "    def train(self, train_input, train_target, num_epochs) -> None:\n",
         "        # : train˙input : tensor of size (N , C , H , W ) containing a noisy version of the images.\n",
         "        # : train˙target : tensor of size (N , C , H , W ) containing another noisy version of the\n",
         "        # same images , which only differs from the input by their noise.\n",
         "\n",
         "        batch_size = 100\n",
-        "        epochs = 500\n",
-        "        epochs_to_print = torch.arange(0,epochs,int(epochs/50))\n",
+        "        epochs_to_print = torch.arange(0,num_epochs,int(num_epochs/5))\n",
         "        total_loss = 0\n",
         "\n",
         "        for epoch in range(epochs):\n",
@@ -141,13 +164,14 @@
         "        \n",
         "        y = self.encoder(test_input)\n",
         "        y = self.decoder(y)\n",
+        "        y = torch.clamp(y,0,255)\n",
         "        \n",
         "        return y\n"
       ],
       "metadata": {
         "id": "wrpou9NqSqvm"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +190,7 @@
         "\n",
         "\n",
         "    # Select a subset to speed up computations\n",
-        "    train_size = 1000\n",
+        "    train_size = 50000\n",
         "    train_input = train_input[:train_size]\n",
         "    train_target = train_target[:train_size]\n",
         "    test_input = test_input[:train_size]\n",
@@ -227,20 +251,24 @@
         "      n_comparisons = 5\n",
         "      for i in range(n_comparisons):\n",
         "          f = plt.figure()\n",
-        "          f.add_subplot(1, 2, 1)\n",
+        "          f.add_subplot(1, 3, 1)\n",
         "          fig1 = plt.imshow(images[i].int().permute(1, 2, 0))\n",
         "          fig1.axes.get_xaxis().set_visible(False)\n",
         "          fig1.axes.get_yaxis().set_visible(False)\n",
-        "          f.add_subplot(1, 2, 2)\n",
+        "          f.add_subplot(1, 3, 2)\n",
         "          fig2 = plt.imshow(pred[i].int().permute(1, 2, 0))\n",
         "          fig2.axes.get_xaxis().set_visible(False)\n",
         "          fig2.axes.get_yaxis().set_visible(False)\n",
+        "          f.add_subplot(1, 3, 3)\n",
+        "          fig3 = plt.imshow(ref[i].int().permute(1, 2, 0))\n",
+        "          fig3.axes.get_xaxis().set_visible(False)\n",
+        "          fig3.axes.get_yaxis().set_visible(False)\n",
         "          plt.show(block=True)"
       ],
       "metadata": {
         "id": "LYPefORASvQ-"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +284,7 @@
         "id": "ROWodlRdUCcl",
         "outputId": "db54384c-6d1c-412e-d506-1c7c2cd01ea2"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
